# mlx_grpc_inference

./: .gitignore  ACHIEVEMENTS.md  ARCHITECTURE_PLAN.md  ARCHITECTURE_UPDATE_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_VALIDATION_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOY_WORKERS.md  DISTRIBUTED_DEBUGGING_LOG.md  DISTRIBUTED_STATUS.md  DNS_IMPROVEMENTS_REPORT.md  FINAL_SOLUTION.md  INTEGRATED_SOLUTION.md  KV_CACHE_STRATEGY.md  MANUAL_LAUNCH.md  MONITORING.md  MPI_WORKING.md  Makefile  NEXT_STEPS.md  PERFORMANCE_ANALYSIS.md  PYTORCH_DISTRIBUTED_SETUP.md  README.md  README_MODELS.md  TENSOR_PARALLEL_STATUS.md  TEST_SUITE_REPORT.md  WORKING_PIPELINE_SUMMARY.md  add_pipeline_support.py  add_pipeline_to_model.py  add_qwen3_pipeline.py  api_server_corrected.py  api_server_kv_optimized.py  api_server_modular.py  api_server_single_device.py  basic_distributed_inference.py  check_glm_info.py  check_mpi.py  check_pipeline_support.py  compare_forward_pass.py  compare_generation_methods.py  compare_single_vs_distributed.py  (+259 more)
archive/mlx_inference_distributed/: CONSOLIDATED_INVENTORY.md  MEMORY_OPTIMIZATION_GUIDE.md  MLX_TENSOR_SERIALIZATION_FIXES.md  README.md  README_DYNAMIC.md  README_WORKING.md  SIMPLE_FIX_PLAN.md  api_log.txt  comprehensive_sharding_verification.py  control_distributed_mlx.sh  debug_config.py  diagnose_2device.py  distributed_adamw.py  distributed_api.py  distributed_api_dynamic.py  distributed_api_enhanced.py  distributed_comm.py  distributed_config.json  distributed_config.py  distributed_config_3device.json  distributed_config_old.json  distributed_config_single.json  distributed_inference_new.py  distributed_inference_pb2_grpc.py  distributed_mlx_inference.py  distributed_mlx_inference_dynamic.py  distributed_openai_api.py  distributed_server_enhanced.py  dynamic_cluster_manager.py  generate_proto.sh  grpc_client.py  grpc_tensor_service.py  hardware_detector.py  implementation_validation.py  launch_2_device_cluster.sh  launch_cluster.sh  launch_distributed.sh  launch_distributed_api.sh  launch_final.sh  launch_grpc_server.sh  (+66 more)
archive/mlx_inference_distributed/configs/: benchmark_results_1753960697.json  distributed_config.json  distributed_config_single.json  kd_pyproject.toml  test_request.json  training_pyproject.toml
archive/mlx_inference_distributed/docs/: ACHIEVEMENT_REPORT.md  ACTIVE_WORK_LOG.md  COMPLETE_DIRECTORY_ANALYSIS.md  COMPLETE_FILE_INVENTORY.md  DIRECTORY_CLEANUP_NEEDED.md  DIRECTORY_RENAMING_PLAN.md  FINAL_COORDINATION_SUMMARY.md  MLX_DISTRIBUTED_INFERENCE_FILES.md  MLX_TRAINING_ADDITIONAL_COMPONENTS.md  MLX_TRAINING_ARCHIVE_ANALYSIS.md  OPTIMIZATION_RECOMMENDATIONS.md  PERFORMANCE_ANALYSIS.md  README.md  README_DISTRIBUTED.md  SAFE_CLEANUP_PLAN.md  SHARDING_ANALYSIS_REPORT.md  SINGLE_DEVICE_MLX_STATUS.md  TEAM_ANALYSIS_REPORT.md  TEAM_A_COMPLETION_PLAN.md  TEAM_A_COMPREHENSIVE_ANALYSIS_AND_FIX_PLAN.md  TEAM_A_COMPREHENSIVE_TEST_PLAN.md  TEAM_A_FINAL_INVESTIGATION_REPORT.md  TEAM_A_STRUCTURED_PLAN.md  TEAM_A_TROUBLESHOOTING_REPORT.md  TEAM_B_COMPLETION_PLAN.md  TEAM_B_COMPREHENSIVE_TEST_PLAN.md  TEAM_B_DEVICE_DETECTION_INTEGRATION.md  TEAM_B_DIRECTORY_STRUCTURE.md  TEAM_B_INTEGRATION_PACKAGE.md  TEAM_B_MIGRATION_PLAN.md  TEAM_B_VALIDATION_REPORT.md  TEAM_COORDINATION.md  TEAM_C_A++_ACHIEVEMENT_REPORT.md  TEAM_C_CLEAN_FILE_STRUCTURE.md  TEAM_C_COMPREHENSIVE_PLAN.md  TEAM_C_IMPORT_FIX.md  TEAM_C_KD_IMPLEMENTATION_PLAN.md  TEAM_C_NEXT_PHASE_GUIDANCE.md  TEAM_C_PRODUCTION_TESTING_GUIDE.md  TEAM_C_REMAINING_TASKS.md  (+7 more)
archive/mlx_inference_distributed/protos/: distributed_comm.proto  distributed_inference.proto
archive/mlx_inference_distributed/tests/: conftest.py  test_distributed_comm.py  test_hardware_detection.py
archive/mlx_inference_distributed/tests/benchmarks/: README.md  automated_validation.py  communication_benchmark.py  comprehensive_benchmark.py  performance_comparison.py  run_full_benchmark_suite.py
archive/mlx_inference_distributed/tests/integration/: test_3device_cluster.py
archive/mlx_inference_distributed/tests/smoke/: test_basic_functionality.py
archive/mlx_inference_distributed/workers/master/: distributed_api.py  grpc_client.py  mlx_inference.py  mlx_model_parallel.py  model_abstraction.py  mpi_inference_server.py  quick_test_openai.py  sharding_strategy.py  test_network_setup.py
archive/mlx_inference_distributed/workers/mini2/: auto_configure_cluster.py  device_capabilities.py  distributed_api.py  distributed_comm.py  distributed_comm_pb2.py  distributed_comm_pb2_grpc.py  distributed_config_v2.py  distributed_inference_pb2.py  grpc_server.py  (+11 more)
archive/mlx_training_distributed/: .env.example  .gitignore  API_REFERENCE.md  CLEAN_FILE_STRUCTURE.md  FEATURE_COMPARISON.md  FINAL_STREAMLINED_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  PHASE_5_TESTING_GUIDE.md  README.md  TEAM_B_2_MINUTE_SOLUTION.md  TEAM_B_IMPLEMENTATION_SUMMARY.md  TEAM_B_INSTANT_FIX.py  TEAM_B_INTEGRATION_PACKAGE.md  TEAM_B_UNIFIED_FIX.py  UNIFIED_DISTRIBUTED_ARCHITECTURE.md  demo_real_mlx_training.py  device_comm.py  distributed_config.json  distributed_server.py  fix_mlx_imports.py  launch_distributed.sh  main.py  master_server.py  mini2_server.py  mlx_training_server.py  mlx_training_server_integrated.py  mlx_training_server_no_auth.py  model_splitter.py  pyproject.toml  requirements.txt  sample_training_config.yaml  setup.py  simple_mlx_server.py  simple_server.py  simple_unified_server.py  start_distributed_cluster.sh  stop_distributed_cluster.sh  team_b_api_modifications.py  team_b_auto_setup.sh  (+16 more)
archive/mlx_training_distributed/distributed_inference/: coordinator.py
archive/mlx_training_distributed/examples/: alpaca_example.json  sharegpt_example.json
archive/mlx_training_distributed/lora/: lora_integration.py
archive/mlx_training_distributed/mlx_unified_training/: PLATFORM_OVERVIEW.md  README.md  pyproject.toml  setup.sh  start_server.sh
archive/mlx_training_distributed/scripts/: security_check.py
archive/mlx_training_distributed/src/: __init__.py
archive/mlx_training_distributed/streamlined/: README.md  team_b_complete_solution.py
(+148 files in other folders)
