[project]
name = "mlx-grpc-inference"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "fastapi>=0.116.1",
    "grpcio-tools>=1.74.0",
    "huggingface-hub>=0.34.3",
    "ml-dtypes>=0.5.3",
    "mlx-lm>=0.20.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.5.3",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "uvicorn>=0.35.0",
]
