[project]
name = "mlx-distributed"
version = "0.1.0"
description = "Distributed inference and training for MLX models across heterogeneous Apple Silicon devices"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "MLX Distributed Team" }
]
keywords = ["mlx", "distributed", "inference", "training", "apple-silicon", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core MLX dependencies
    "mlx>=0.22.0",
    "mlx-lm>=0.21.0",
    
    # API and web framework
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.5",
    "aiohttp>=3.8.0",
    
    # gRPC for distributed communication
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "protobuf>=5.29.3",
    
    # Utilities
    "numpy>=2.2.1",
    "psutil>=6.1.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "zeroconf>=0.132.2",
    
    
    # Development dependencies
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "black>=24.10.0",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
]


[project.scripts]
mlx-distributed = "mlx_distributed.cli:main"
mlx-serve = "mlx_distributed.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_distributed"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "requests>=2.32.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"*_pb2*.py" = ["E", "F", "I", "N", "W", "B", "Q"]  # Ignore protobuf generated files

[tool.black]
line-length = 100
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | .*_pb2.*\.py
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [".*_pb2.*\\.py$"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "distributed: marks tests that require multiple devices",
]
